--- a/papers/icwe14/references.bib
+++ b/papers/icwe14/references.bib
@@ -1,5 +1,32 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@inproceedings{odersky2005scalable,
+  title={Scalable component abstractions},
+  author={Odersky, Martin and Zenger, Matthias},
+  booktitle={ACM Sigplan Notices},
+  volume={40},
+  number={10},
+  pages={41--57},
+  year={2005},
+  organization={ACM}
+}
+
+@incollection{Odersky03_vObj,
+year={2003},
+isbn={978-3-540-40531-3},
+booktitle={ECOOP 2003 – Object-Oriented Programming},
+volume={2743},
+series={Lecture Notes in Computer Science},
+editor={Cardelli, Luca},
+doi={10.1007/978-3-540-45070-2_10},
+title={A Nominal Theory of Objects with Dependent Types},
+url={http://dx.doi.org/10.1007/978-3-540-45070-2_10},
+publisher={Springer Berlin Heidelberg},
+author={Odersky, Martin and Cremet, Vincent and Röckl, Christine and Zenger, Matthias},
+pages={201-224}
+}
+
+
 @article{w3c2004document,
   title={Document Object Model (DOM) Level 3 Core Specification},
   author={W3C-World Wide Web Consortium and others},
